feat: доработала класс HttpTaskServer: — переделала обработку эндпоинтов, создала для каждого реализацию отдельного класса HttpHandler — дописала методы getSubtaskFromJson, getTaskFromJson и getEpicFromJson для получения объектов Task, Epic, SubTask из json fix: — изменила в тестах даты для задач для корректной работы тестов — переписала метод getPrioritizedTasks() для корректного отображения списка задач по времени с учётом удалённых задач